// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot 1`] = `
<body>
  <div>
    <button
      class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-xs h-7 px-2 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
      type="button"
    >
      Foobar
    </button>
  </div>
</body>
`;

exports[`Button should match snapshot with loading 1`] = `
<body>
  <div>
    <button
      class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-xs h-7 px-2 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 disabled:text-brand-300 disabled:bg-brand-100 pointer-events-none relative text-transparent"
      type="button"
    >
      <div
        class="aspect-square border-2  rounded-full border-solid border-neutral-350 border-r-neutral-50 animate-spin w-4 absolute left-0 right-0 m-auto"
        data-testid="spinner"
      />
      Foobar
    </button>
  </div>
</body>
`;
